# cfst-ex

./: .gitignore
cfst-extractor/: AGENT_DESIGN.md  PLAN.md  fix.py  help.txt  pyproject.toml  test_local_api.py  validate_script.py
cfst-extractor/colab/: cfst_mineru_batch.ipynb
cfst-extractor/scripts/: extract_cfst_data.py
cfst-extractor/src/cfst_extractor/: __init__.py  cli.py
cfst-extractor/src/cfst_extractor/agent/: __init__.py  agent.py  extractor.py  models.py  tools.py
cfst-extractor/tests/: conftest.py  test_models.py  test_unit_conversion.py
config/: System_Prompt.md  settings.yaml.example
testdata/jsondata/: A[1-12].json  A[1-14].json  A[1-1].json  A[1-2].json  A[1-3].json  A[1-4].json  A[1-5].json  A[1-6].json
