[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cfst-extractor"
version = "0.1.0"
description = "Automated extraction of CFST experimental data from scientific PDF papers"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pint>=0.23",
    "typer>=0.12",
    "structlog>=24.0",
    "pandas>=2.0",
    "lxml>=5.0",
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "pdfplumber>=0.11",
    "thefuzz>=0.22",
    "python-Levenshtein>=0.25",
    "pydantic-ai>=1.62.0",
    "litellm>=1.81.13",
    "deepdiff>=8.6.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "deepdiff>=7.0",
    "ruff>=0.5",
]
llm = [
    "anthropic>=0.30",
]

[project.scripts]
cfst-extract = "cfst_extractor.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cfst_extractor"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
